--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node": "^14.3.0",
     "google-it": "^1.5.0",
     "util": "^0.12.3"
+    "node-persist": "^3.1.0"
   },
   "engines": {
     "node": "12.13.0"
